[package]
name = "pgen"
version = "0.1.0"
authors = ["thottiest <rohan.ankb+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33", features = ["yaml"]} 
rand = "0.7"
assert_cli = "0.6"
